[tool.poetry]
name = "cent"
version = "0.0.0"
description = ""
authors = ["luka598 <luka598@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
